--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -19,10 +20,11 @@
 }
 
 .sd{
-  background-color: #bbb170;
+  background-color: #313048;
   overflow: hidden;
   
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -34,14 +36,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-th{
-  background-color: #50445d;
-  color:#bbb170;;
-}
-tr:nth-child(even){
-  background-color: #bbb170;
-  color:black;
-}
+
 .center {
   margin-left: auto;
   margin-right: auto;
@@ -50,12 +45,6 @@ tr:nth-child(even){
   text-align: center;
 }
 
-table{
-  width: 100%;
-}
-tr, td{
-  align-items: center;
-}
 
 .button-container {
   display:flex;
@@ -71,30 +60,42 @@ tr, td{
   color: rgb(58, 64, 65);
 }
 .btn-primary {
- background-color: #50445d;
- color: #bbb170;
+  background-color: rgb(241, 235, 235);
+  color: #313048;
  border-radius: 12px;
  padding: 14px;
- box-shadow: 7px 6px 7px rgba(0, 0, 0, 0.2);
+ box-shadow: 7px 6px 7px rgb(233 217 217 / 18%);
+}
+.heading{
+  color:rgb(241, 235, 235);
 }
 .title.card-title.h5{
-  color:#bbb170;
+  color:#1d1c16;
 }
 .body1{
-  background-color: #bbb170;
-  color:#50445d
+  background-color: white;
+  color:#44465d;  
 }
+
+
 .div1{
  border-radius: 10px;
-  background-color: #50445d;
+  background-color:white
 }
   
 .align1{
   display:flex;
   justify-content: space-between;
+  color:rgb(239, 241, 235);
  } 
  
-
+ .carouselColor{
+  color:white;  
+ }
+ .seller-card-text-color{
+  color:#44465d;
+ }
+ 
 .card1{
   margin:10px;
  
@@ -103,6 +104,14 @@ tr, td{
   width:30%;
   margin-right: 10px;
 }
+
+.img-size{
+ width : 95%;
+ }
+
+
+
+
 
 
 
